Fiz date order and model validation

--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
@@ -6,12 +6,12 @@
     <div class="row">
         <div class="col-6">
             <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" name="name" [(ngModel)]="item.name" required />
+            <input id="name" type="text" class="form-control" name="name" [(ngModel)]="item.name" di-model-validator [key]="'Name'" />
         </div>
 
         <div class="col-6">
             <label for="description">Description</label>
-            <input id="description" type="text" class="form-control" name="description" [(ngModel)]="item.description" required />
+            <input id="description" type="text" class="form-control" name="description" [(ngModel)]="item.description" />
         </div>
 
         <div class="col-6">
