--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/edit/client.edit.component.html
@@ -6,28 +6,28 @@
     <div class="row">
         <div class="col-6">
             <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" [(ngModel)]="client.name" di-model-validator [key]="'Name'" required />
+            <input id="name" type="text" class="form-control" [(ngModel)]="client.name" di-model-validator [key]="'Name'" />
         </div>
 
         <div class="col-6">
             <label for="number">Number</label>
-            <input id="number" type="text" class="form-control" [(ngModel)]="client.number" di-model-validator [key]="'Number'" required />
+            <input id="number" type="text" class="form-control" [(ngModel)]="client.number" di-model-validator [key]="'Number'" />
         </div>
 
 
         <div class="col-6">
             <label for="price">Address</label>
-            <input id="price" type="text" class="form-control" [(ngModel)]="client.address" required />
+            <input id="price" type="text" class="form-control" [(ngModel)]="client.address" />
         </div>
 
         <div class="col-6">
             <label for="price">City</label>
-            <input id="price" type="text" class="form-control" [(ngModel)]="client.city" required />
+            <input id="price" type="text" class="form-control" [(ngModel)]="client.city" />
         </div>
 
         <div class="col-6">
             <label for="price">State</label>
-            <input id="price" type="text" class="form-control" [(ngModel)]="client.state" required />
+            <input id="price" type="text" class="form-control" [(ngModel)]="client.state" />
         </div>
 
         <div class="col-6">
