--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -7,11 +7,11 @@
         <h2>Sign in</h2>
         <div class="form-group">
             <label>Username</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
+            <input type="text" class="form-control" name="username" [(ngModel)]="username" di-model-validator [key]="'Username'" />
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
+            <input type="password" class="form-control" name="password" [(ngModel)]="password" di-model-validator [key]="'Password'" />
         </div>
         <div class="form-group clearfix">
             <div class="float-right">
