--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
@@ -6,18 +6,18 @@
     <div class="row">
         <div class="col-6">
             <label for="name">Name</label>
-            <input id="name" type="text" class="form-control" [(ngModel)]="product.name" required />
+            <input id="name" type="text" class="form-control" [(ngModel)]="product.name" di-model-validator [key]="'Name'" />
         </div>
 
         <div class="col-6">
             <label for="description">Description</label>
-            <input id="description" type="text" class="form-control" [(ngModel)]="product.description" required />
+            <input id="description" type="text" class="form-control" [(ngModel)]="product.description" />
         </div>
 
 
         <div class="col-6">
             <label for="price">Price</label>
-            <input id="price" type="text" class="form-control" [(ngModel)]="product.price" required />
+            <input id="price" type="text" class="form-control" [(ngModel)]="product.price" di-model-validator [key]="'Price'" />
         </div>
 
         <div class="col-6">
