--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -7,19 +7,19 @@
         <h2>Register</h2>
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="user.name" required />
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.name" di-model-validator [key]="'Name'" />
         </div>
         <div class="form-group">
             <label>Username</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.username" di-model-validator [key]="'Username'" />
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
+            <input type="password" class="form-control" name="password" [(ngModel)]="user.password" di-model-validator [key]="'Password'" />
         </div>
         <div class="form-group">
             <label>Role</label>
-            <select class="form-control" [(ngModel)]="user.role" name="role">
+            <select class="form-control" [(ngModel)]="user.role" name="role" di-model-validator [key]="'Role'">
                 <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
             </select>
         </div>
