--- a/StoreApp.Web/ClientAngularApp/app/components/project/user/user.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/user/user.edit.component.html
@@ -18,12 +18,12 @@
 
         <div class="col-6">
             <label for="description">Name</label>
-            <input id="description" type="text" class="form-control" name="name" [(ngModel)]="user.name" required />
+            <input id="description" type="text" class="form-control" name="name" [(ngModel)]="user.name" di-model-validator [key]="'Name'" />
         </div>
 
         <div class="col-6">
             <label for="password">Password</label>
-            <input id="password" type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
+            <input id="password" type="password" class="form-control" name="password" [(ngModel)]="user.password" di-model-validator [key]="'Password'" />
         </div>
 
     </div>
