--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -4,7 +4,7 @@
 
 <div class="login-form">
     <form>
-        <h2>Sign in</h2>
+        <h2>Log in</h2>
         <div class="form-group">
             <label>Username</label>
             <input type="text" class="form-control" name="username" [(ngModel)]="username" di-model-validator [key]="'Username'" />
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group clearfix">
             <div class="float-right">
-                <button type="submit" class="btn btn-primary pull-left" (click)="login()">Sign in</button>
+                <button type="submit" class="btn btn-primary pull-left" (click)="login()">Access</button>
             </div>
             <div class="float-left">
                 <a routerLink="/register">Forgot your password?</a>
