--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -25,6 +25,7 @@
         </div>
         <div class="form-group clearfix">
             <div class="float-right">
+                    <a class="btn btn-secondary" routerLink="/items">Cancel</a>
                 <button type="button" class="btn btn-primary" (click)="createUser()">Create User</button>
             </div>
         </div>
