--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -4,7 +4,7 @@
 
 <div class="register-form">
     <form>
-        <h2>Register</h2>
+        <h2>Register User</h2>
         <div class="form-group">
             <label>Name</label>
             <input type="text" class="form-control" name="username" [(ngModel)]="user.name" di-model-validator [key]="'Name'" />
@@ -25,8 +25,8 @@
         </div>
         <div class="form-group clearfix">
             <div class="float-right">
-                    <a class="btn btn-secondary" routerLink="/items">Cancel</a>
-                <button type="button" class="btn btn-primary" (click)="createUser()">Create User</button>
+                    <a class="btn btn-secondary" routerLink="/login">Cancel</a>
+                <button type="button" class="btn btn-primary" (click)="createUser()">Create</button>
             </div>
         </div>
     </form>
