--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
@@ -1,7 +1,10 @@
 
-<comp-navtop></comp-navtop>
-
 <table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th>Something got wrong!</th>
+        </tr>
+    </thead>
     <tbody>
         <tr>
             <td><strong>Url: </strong> {{url}}</td>
