--- a/StoreApp.Web/ClientAngularApp/app/components/project/clients/clients.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/clients/clients.component.html
@@ -8,51 +8,53 @@
         <a class="btn btn-primary float-right" routerLink="/clients/edit">Add</a>
     </div>
 
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Number
-                </th>
-                <th>
-                    Is Active
-                </th>
-                <th>
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let client of clients">
-                <td>
-                    {{client.name}}
-                </td>
-                <td>
-                    {{client.number}}
-                </td>
-                <td>
-                    {{client.isActive}}
-                </td>
-                <td>
-                    <a class="btn btn-light btn-sm" [routerLink]="['/clients/edit', client.id]" title="edit">
-                        <span class="oi oi-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a class="btn btn-light btn-sm" (click)="remove(client)" title="remove">
-                        <span class="oi oi-trash" aria-hidden="true"></span>
-                    </a>
+    <div style="overflow: auto;">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Number
+                    </th>
+                    <th>
+                        Is Active
+                    </th>
+                    <th>
+                        Actions
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let client of clients">
+                    <td>
+                        {{client.name}}
+                    </td>
+                    <td>
+                        {{client.number}}
+                    </td>
+                    <td>
+                        {{client.isActive}}
+                    </td>
+                    <td>
+                        <a class="btn btn-light btn-sm" [routerLink]="['/clients/edit', client.id]" title="edit">
+                            <span class="oi oi-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a class="btn btn-light btn-sm" (click)="remove(client)" title="remove">
+                            <span class="oi oi-trash" aria-hidden="true"></span>
+                        </a>
 
-                </td>
-            </tr>
+                    </td>
+                </tr>
 
-            <tr *ngIf="clients.length == 0">
-                <td colspan="5" style="text-align: center;">
-                    No clients.
-                </td>
-            </tr>
+                <tr *ngIf="clients.length == 0">
+                    <td colspan="5" style="text-align: center;">
+                        No clients.
+                    </td>
+                </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
