--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
@@ -8,51 +8,53 @@
         <a class="btn btn-primary float-right" routerLink="/items/edit">Add</a>
     </div>
 
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Description
-                </th>
-                <th>
-                    Is Active
-                </th>
-                <th>
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of items">
-                <td>
-                    {{item.name}}
-                </td>
-                <td>
-                    {{item.description}}
-                </td>
-                <td>
-                    {{item.isActive}}
-                </td>
-                <td>
-                    <a class="btn btn-light btn-sm" [routerLink]="['/items/edit', item.id]" title="edit">
-                        <span class="oi oi-pencil" aria-hidden="true"></span>
-                    </a>
-                    <a class="btn btn-light btn-sm" (click)="remove(item)" title="remove">
-                        <span class="oi oi-trash" aria-hidden="true"></span>
-                    </a>
+    <div style="overflow: auto;">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Description
+                    </th>
+                    <th>
+                        Is Active
+                    </th>
+                    <th>
+                        Actions
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of items">
+                    <td>
+                        {{item.name}}
+                    </td>
+                    <td>
+                        {{item.description}}
+                    </td>
+                    <td>
+                        {{item.isActive}}
+                    </td>
+                    <td>
+                        <a class="btn btn-light btn-sm" [routerLink]="['/items/edit', item.id]" title="edit">
+                            <span class="oi oi-pencil" aria-hidden="true"></span>
+                        </a>
+                        <a class="btn btn-light btn-sm" (click)="remove(item)" title="remove">
+                            <span class="oi oi-trash" aria-hidden="true"></span>
+                        </a>
 
-                </td>
-            </tr>
+                    </td>
+                </tr>
 
-            <tr *ngIf="items.length == 0">
-                <td colspan="4" style="text-align: center;">
-                    No items.
-                </td>
-            </tr>
+                <tr *ngIf="items.length == 0">
+                    <td colspan="4" style="text-align: center;">
+                        No items.
+                    </td>
+                </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
